--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Crud Application</span>
+  <span>GreatHR</span>
   <span class="example-spacer"></span>
   <button mat-raised-button (click)="openAddEditEmpForm()">
     ADD EMPLOYEE
@@ -39,12 +39,12 @@
       </ng-container>
 
       <ng-container matColumnDef="dob">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> dob </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DoB </th>
         <td mat-cell *matCellDef="let row"> {{row.dob | date}}</td>
       </ng-container>
 
       <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> gender </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
         <td mat-cell *matCellDef="let row"> {{row.gender}}</td>
       </ng-container>
 
